--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 ░▒▓███████▓▒░ ░▒▓██████▓▒░ ░▒▓██████▓▒░░▒▓█▓▒░░▒▓█▓▒░░▒▓██████▓▒░░▒▓████████▓▒░       ░▒▓██████▓▒░ ░▒▓██████▓▒░░▒▓███████▓▒░░▒▓████████▓▒░                                                                
 </span>
 </a>
-<a href="mailto:development@apertureviewer.com" target="_blank">  
+<a href="mailto:contact@apertureviewer.com" target="_blank">  
 <span class="color-contact"> 
  ░▒▓██████▓▒░  ░▒▓██████▓▒░ ░▒▓███████▓▒░░▒▓████████▓▒░░▒▓██████▓▒░  ░▒▓██████▓▒░░▒▓████████▓▒░                                                                                                           
 ░▒▓█▓▒░░▒▓█▓▒░░▒▓█▓▒░░▒▓█▓▒░░▒▓█▓▒░░▒▓█▓▒░  ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓█▓▒░░▒▓█▓▒░░▒▓█▓▒░  ░▒▓█▓▒░                                                                                                               
@@ -245,3 +245,4 @@
 
 </body>
 </html>
+
